feat(report): definition filter for modelElement views (#3762)
relates to #OPT-5440